test/raw_tests/fails/purity_ko9.sol
contract C {
  int[] a;

  function pop() public pure {
    (true ? a.pop : a.pop)();
  }

}